# bouncer

./: MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
bouncer/: admin.py  serializer.py  urls.py
bouncer/migrations/: 0001_initial.py
bouncer/templates/bouncer/: index.html
src/bouncer/: models.py  views.py
src/bouncer.egg-info/: PKG-INFO  SOURCES.txt
src/bouncer/management/commands/: check_bounces.py
